reduced top margin

--- a/main.tex
+++ b/main.tex
@@ -3,12 +3,14 @@
 \usepackage{verbatim}
 
 \sectionwidth=1in
-\linespread{1.02}
+\linespread{1.05}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
 
 \begin{document}
+
+\vspace*{-0.5in}
 
 \name{Shraddha Sridhar\\[8pt]} % the \\[12pt] adds a blank line after name
 
