--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,9 @@ blah blah
 \item
 {\bf Digital}: Designed 3:8 decoder including layout and optimized the average energy delay product. Implemented 8-bit FIR filter including layout and optimizing the design for minimum EDP.
 Analog projects: Designed and optimized 50 ohm driver amplifier, folded cascode opamp and different current mirrors and beta multiplier circuits. Optimized CMOS switches for low noise
-\item{\bf MEMS}: Implemented a MEMS based capacitive microphone array for improved directionality and sensitivity. Simulated the array using COMSOL and created a layout for the array using LEdit. Created a complete process flow for the design.\end{itemize}
+\item
+{\bf MEMS}: Implemented a MEMS based capacitive microphone array for improved directionality and sensitivity. Simulated the array using COMSOL and created a layout for the array using LEdit. Created a complete process flow for the design.
+\end{itemize}
 
 I left out the irrelevant stats project, write something else in its place
 
@@ -76,7 +78,7 @@ I left out the irrelevant stats project, write something else in its place
 \section{Computer \\ Skills}
    \begin{tabular}{l p{3.5in}}
      	{\bf Software} &  Cadence IC, Diva Tools, HSpice, Spectre, Calibre, Xilinx ISE, COMSOL, LEdit, Matlab, Eagle \\\\
-	{\bf Languages} & C++, Pearl, VHDL, bash
+	{\bf Languages} & C++, Perl, VHDL, bash
  \end{tabular}
 
 \end{resume} 
