--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@ First class (66\%), Mumbai University, India\\
 \begin{itemize} 
 	\item Worked on test-benches and Overhauled a milieu of electronic instruments used on civil aviation aircrafts like Radar Equipment, cockpit voice recorder, Digital Passenger Controlling Unit and headsets.
 	
-	This can be ditched I guess
+	This can be ditched 
 \end{itemize}
 
 \section{Teaching}
