--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \usepackage{verbatim}
 
 \sectionwidth=1in
-\linespread{1.05}
+\linespread{1.0}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
@@ -33,14 +33,14 @@ First class (66\%), Mumbai University, India\\
 \textit{Courses}: Computer Architecture, Digital Signal Processing, Elements of Microprocessors, Electronic Instrumentation, Microcontrollers and Embedded Programming, Digital Communication, Microwave Devices and Circuits, Computer Communication Networks
 
 \section{Experience}
-{\bf Research Assistant} \hfill May 2011 - present\\
+{\bf Research Aide} \hfill May 2011 - present\\
 {\bf Prof. Lawrence Clark, ASU}
 \begin{itemize}
 	\item Master’s thesis: Design of an automated validation environment for the validation of a Radiation Hardened MIPS-4k based processor. Involves writing Perl scripts to generate random tests, provide test inputs to the RTL model from OVP (a MIPS Emulator) and for comparing the results from the emulator and RTL for the functional verification of the RTL model. Also implementing directed tests using VMIPS emulator for corner cases.	
-	\item Microprocessor Cache Design: Currently designing a Radiation Hardened Microprocessor write through cache for a 45 nm SOI process. Circuit Simulation using Cadence IC and HSPice, Timing Analysis using Nanotime, a Synopsys tool and layout using Calibre.
+	\item Microprocessor Cache Design: Currently designing a Radiation Hardened Microprocessor write through cache for a 45 nm SOI process. Aiming at an operating frequency of 5 GHz.
 \end{itemize} 
 
-{\bf Research Assistant} \hfill Jan 2011 - May 2011\\
+{\bf Research Aide} \hfill Jan 2011 - May 2011\\
 {\bf Prof. Michael Goryll, ASU}
 \begin{itemize}
 	\item Implemented a transimpedance amplifier on an AMI process for measuring currents through single ion channels of cells, soon to be sent for tape out.
@@ -52,28 +52,21 @@ First class (66\%), Mumbai University, India\\
 	\item Designed a Digital Comb FIR filter and implemented it on a custom designed FPGA system. Simulations were done on MATLAB to condition transducer signals at 25 Hz having all odd harmonics till 5KHz. SNR was improved by a factor of 3. Novel techniques include the use of 2048 coefficients for band pass filter using Kaiser window and DMA for the external RAM memory of the FPGA.
 \end{itemize} 
 
-{\bf Internship, Electronics Overhaul Division} \hfill May 2008 - July 2008\\
-\begin{itemize} 
-	\item Worked on test-benches and Overhauled a milieu of electronic instruments used on civil aviation aircrafts like Radar Equipment, cockpit voice recorder, Digital Passenger Controlling Unit and headsets.
-	
-	This can be ditched 
-\end{itemize}
 
 \section{Teaching}
-blah blah
+Teaching Associate for Advanced VLSI Design (EEE 625, ASU). Involves managing simulation labs on digital circuit design projects like cache design, register file array design.
 \section{Publications}
-‘Real time locating Systems using RFID-Radar’ at the ‘National Conference on Innovations in Electronics and Information Technology, 2009 (cite properly)
+‘Real time locating Systems using RFID-Radar’ at the 'National Conference on Innovations in Electronics and Information Technology, 2009', Wadala, Mumbai.
 
 \section{Projects}
 \begin{itemize}
 \item
-{\bf Digital}: Designed 3:8 decoder including layout and optimized the average energy delay product. Implemented 8-bit FIR filter including layout and optimizing the design for minimum EDP.
-Analog projects: Designed and optimized 50 ohm driver amplifier, folded cascode opamp and different current mirrors and beta multiplier circuits. Optimized CMOS switches for low noise
+{\bf Digital}:  Implemented 8-bit FIR filter including layout and optimized the design for minimum EDP. Designed 3:8 decoder including layout and optimized the average energy delay product.
 \item
-{\bf MEMS}: Implemented a MEMS based capacitive microphone array for improved directionality and sensitivity. Simulated the array using COMSOL and created a layout for the array using LEdit. Created a complete process flow for the design.
+{\bf Analog}: Designed and optimized 50 ohm driver amplifier, folded cascode opamp and different current mirrors and beta multiplier circuits. Optimized CMOS switches for low noise. Also designed a differentially sensed voltage controlled oscillator circuit.
+\item
+{\bf MEMS}: Implemented a MEMS based capacitive microphone array for improved directionality and sensitivity. Created a complete process flow for the design.
 \end{itemize}
-
-I left out the irrelevant stats project, write something else in its place
 
 % Tabulate Computer Skills; p{3in} defines paragraph 3 inches wide
 \section{Computer \\ Skills}
