pratik is an idiot, i hate him

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \usepackage{verbatim}
 
 \sectionwidth=1in
-\linespread{1.0}
+\linespread{0.96}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
@@ -25,25 +25,26 @@ To consolidate and effectively apply my skill set to real world challenges in El
 \section{Education}
 {\bf M.S. in Electrical Engineering, Arizona State University} \hfill  May 2012\\
 GPA: 3.55 / 4\\
-\textit{Courses}: VLSI Design, Advanced VLSI Design, Advanced Analog Integrated Circuits, MEMS, Analog Integrated Digital Systems and Circuits, Semiconductor Device Theory, Design of Engg. Experiments\\
+\textit{Courses}: VLSI Design, Advanced VLSI Design, Advanced Analog Integrated Circuits, MEMS, Digital Systems and Circuits, Semiconductor Device Theory, Design of Engg. Experiments\\
+\textit{Future Courses}: Advanced Hardware Systems Design, Low power Bioelectronics, Analog to Digital Converters
 
 \vspace{-0.2in}
 {\bf Bachelor of Engineering, Electronics and Communications}  \hfill June 2010\\
 First class (66\%), Mumbai University, India\\
-\textit{Courses}: Computer Architecture, Digital Signal Processing, Elements of Microprocessors, Electronic Instrumentation, Microcontrollers and Embedded Programming, Digital Communication, Microwave Devices and Circuits, Computer Communication Networks
+\textit{Courses}: Computer Architecture, Microcontrollers and Embedded Programming, Digital Signal Processing, Elements of Microprocessors, Electronic Instrumentation, Digital Communication, Microwave Devices and Circuits, Computer Communication Networks
 
 \section{Experience}
 {\bf Research Aide} \hfill May 2011 - present\\
 {\bf Prof. Lawrence Clark, ASU}
 \begin{itemize}
-	\item Master’s thesis: Design of an automated validation environment for the validation of a Radiation Hardened MIPS-4k based processor. Involves writing Perl scripts to generate random tests, provide test inputs to the RTL model from OVP (a MIPS Emulator) and for comparing the results from the emulator and RTL for the functional verification of the RTL model. Also implementing directed tests using VMIPS emulator for corner cases.	
-	\item Microprocessor Cache Design: Currently designing a Radiation Hardened Microprocessor write through cache for a 45 nm SOI process. Aiming at an operating frequency of 5 GHz.
+	\item Functional validation of MIPS-4k based processor: Design of an automated validation environment for the functional verification of a Radiation Hardened MIPS-4k based processor. Involves using the scoreboard method to run tests with random instructions through the RTL model and OVP (a MIPS Emulator). Automating the complete flow from generating tests till comparing the outputs using Perl scripts.Implementing directed tests using VMIPS emulator for corner cases.	
+	\item Microprocessor Cache Design: Currently designing a Radiation Hardened Microprocessor 16kB, 4-way set associative write through cache for a 45 nm SOI process. Aiming at an operating frequency of 5 GHz.
 \end{itemize} 
 
 {\bf Research Aide} \hfill Jan 2011 - May 2011\\
 {\bf Prof. Michael Goryll, ASU}
 \begin{itemize}
-	\item Implemented a transimpedance amplifier on an AMI process for measuring currents through single ion channels of cells, soon to be sent for tape out.
+	\item Implemented a switched capacitive transimpedance amplifier on an AMI process for measuring currents through single ion channels of cells, soon to be sent for tape out.
 \end{itemize}
  
 {\bf Project Trainee} \hfill July 2009 - May 2010\\
@@ -72,7 +73,7 @@ Teaching Associate for Advanced VLSI Design (EEE 625, ASU). Involves managing si
 \section{Computer \\ Skills}
    \begin{tabular}{l p{3.5in}}
      	{\bf Software} &  Cadence IC, Diva Tools, HSpice, Spectre, Calibre, Xilinx ISE, COMSOL, LEdit, Matlab, Eagle \\\\
-	{\bf Languages} & C++, Perl, VHDL, bash
+	{\bf Languages} & C++, Perl, VHDL, Verilog, bash
  \end{tabular}
 
 \end{resume} 
