--- a/resume.tex
+++ b/resume.tex
@@ -2,8 +2,8 @@
 % the margin option causes section titles to appear to the left of body text 
 \usepackage{verbatim}
 
-\sectionwidth=1in
-\linespread{0.96}
+\sectionwidth=0.9in
+\linespread{1.15}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
 %\usepackage{newcent}   % uses new century schoolbook postscript font 
@@ -68,6 +68,7 @@ S. Sridhar, J. Kapadnis, V.P. Mapare, S. Sonare, ``Real time locating Systems us
 \item
 {\bf MEMS}: Implemented a MEMS based capacitive microphone array for improved directionality and sensitivity. Created a complete process flow for the design.
 \end{itemize}
+
 \section{Extracurricular \\ Activities}
 \begin{itemize}
 \item
@@ -75,6 +76,7 @@ S. Sridhar, J. Kapadnis, V.P. Mapare, S. Sonare, ``Real time locating Systems us
 \item
 {\bf Literary}: Head of Magazine Committee, Electronicsand Telecommunication Student Association, V.I.T. Brought out the first department 
 magazine covering the recent developments in Telecommunication. Passed several Sanskrit literature examinations equivalent to the degree Bachelor of Arts with distinction.
+\item
 {\bf Music} : Head of Music Committee, V.I.T, core member of Cultural Committee, V.I.T. Organized Verve 2009, the popular annual cultural festival of V.I.T. Also, offered various concerts in Indian Classical Music in Mumbai,India. Passed several music examinations with distinction.
 \item
 {\bf Sports}: Won throw-ball, kho-kho- khabaddi events as part of the college girls team.
