pratik is an idiot

--- a/resume.tex
+++ b/resume.tex
@@ -79,13 +79,13 @@ magazine covering the recent developments in Telecommunication. Passed several S
 \item
 {\bf Music} : Head of Music Committee, V.I.T, core member of Cultural Committee, V.I.T. Organized Verve 2009, the popular annual cultural festival of V.I.T. Also, offered various concerts in Indian Classical Music in Mumbai,India. Passed several music examinations with distinction.
 \item
-{\bf Sports}: Won throw-ball, kho-kho- khabaddi events as part of the college girls team.
+{\bf Sports}: Won throw-ball, kho-kho, khabaddi events as part of the college girls team.
 \end{itemize}
 % Tabulate Computer Skills; p{3in} defines paragraph 3 inches wide
 \section{Computer \\ Skills}
    \begin{tabular}{l p{3.5in}}
-        {\bf Software} &  Cadence IC, Diva Tools, HSpice, Spectre, Calibre, Xilinx ISE, COMSOL, LEdit, Matlab, Eagle \\\\
-    {\bf Languages} & C++, Perl, VHDL, Verilog, bash
+        {\bf Software} &  Cadence IC, Diva Tools, HSpice, Spectre, Calibre, Nanotime, PrimeTime, Xilinx ISE, COMSOL, LEdit, Matlab, Eagle \\\\
+    {\bf Languages} & C, C++, Perl, VHDL, Verilog, bash
  \end{tabular}
 
 
