--- a/resume.tex
+++ b/resume.tex
@@ -2,7 +2,7 @@
 % the margin option causes section titles to appear to the left of body text 
 \usepackage{verbatim}
 
-\sectionwidth=0.9in
+\sectionwidth=1.0in
 \linespread{1.15}
 
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
@@ -57,7 +57,10 @@ First class (66\%), Mumbai University, India\\
 \section{Teaching}
 Teaching Associate for Advanced VLSI Design (EEE 625, ASU). Involves managing simulation labs on digital circuit design projects like cache design, register file array design.
 \section{Publications}
+\begin{itemize}
+\item
 S. Sridhar, J. Kapadnis, V.P. Mapare, S. Sonare, ``Real time locating Systems using RFID-Radar'', Electronics and Telecommunication Department, V.I.T, Mumbai, National Conference on Innovations in Electronics and Information Technology, 2009.
+\end{itemize}
 
 \section{Projects}
 \begin{itemize}
