--- a/sop.tex
+++ b/sop.tex
@@ -1,21 +1,32 @@
-\documentclass[11pt, letterpaper]{article}
-\usepackage[margin=1in]{geometry}
-
+\documentclass[letterpaper, 10pt]{article}
+\usepackage[margin=1.2in]{geometry}
+\usepackage{mathrsfs}
+\usepackage{nopageno}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhead{}
+\fancyhead[CO, CE]{Shraddha Sridhar\hfill DOB : 11$^{th}$ August 1988 \hfill Electrical \& Computer Engineering}
+  
 \setlength{\parskip}{0.05in}
-\linespread{1.2}
+\setlength{\parindent}{0.3in}
 
-\title{\textbf{Statement of Purpose}}
-\date{}
+\linespread{1.25}
 
 \begin{document}
-\maketitle
-I, Shraddha Sridhar, am applying for a PhD program in Electrical and Computer Engineering at Univeristy of Massachusetts at Amherst. I wish to pursue my doctoral studies in high performance, low power VLSI circuit design. I am also interested in related problems in analog IC design like high speed I/O circuits, data converters, PLLs and DLLs. In the following paragraphs, I describe my experiences and events that led to my decision of pursuing a career in research. 
+
+\begin{center}
+\vspace*{0.05in}
+{\Large \textbf{Statement of Purpose}}
+\end{center}
+\vspace*{0.2in}
+
+I am applying for a PhD program in Electrical and Computer Engineering at Univeristy of Massachusetts at Amherst. I wish to pursue my doctoral studies in high performance, low power VLSI circuit design. I am also interested in related problems in analog IC design like high speed I/O circuits, data converters, PLLs and DLLs. In the following paragraphs, I would like to describe the experiences and events that have shaped my research interests.
 
 During my undergraduate years, courses like Electronic Circuit Analysis and Design, Digital Circuit Design, x86 System Design, VLSI, and Computer Architecture encouraged me to analyze, design and develop systems with scientific approach and appropriate design methods. As part of coursework I worked on several projects involving hands on experience with x86 family, FPGAs. Such application-oriented projects greatly interested me.
 
-My interest was doubled when I got first hand experience in working with FPGAs and microcontrollers in the confines of a pioneering research institution like Bhabha Atomic Research Center. While working with Prof. G.P. Mishra, I implemented an FPGA based fixed-point 2048 co-efficient FIR filter for low noise application. I also interfaced RAM, DMA and microcontrollers with the FPGA.  Here, as I worked on the different aspects of the project like functional and timing simulations and the PCB design, I learnt some important lessons on practical implementation of theoretical concepts. This enriching experience instilled in me deep respect for comprehension and application of fundamentals and also made me more confident of my analytical thinking abilities.
+My interest was doubled when I got first hand experience in working with FPGAs and microcontrollers in the confines of a pioneering research institution like Bhabha Atomic Research Center (BARC). While working with Prof. G.P. Mishra, I implemented an FPGA based fixed-point 2048 co-efficient FIR filter for low noise application. I also interfaced RAM, DMA and microcontrollers with the FPGA.  Here, as I worked on the different aspects of the project like functional and timing simulations and the PCB design, I learnt some important lessons on practical implementation of theoretical concepts. This enriching experience instilled in me deep respect for comprehension and application of fundamentals and also made me more confident of my analytical thinking abilities.
 
-I then chose Arizona State University to pursue a Master’s degree due to its excellent coursework in Electronic Circuit Design. I concentrated on courses like Analog Circuit Design, Digital Systems and Circuits and Semiconductor Device Theory in the first semester, while also identifying my research interests. Further I did courses on VLSI Circuit Design, Advanced VLSI Circuit Design, Advanced Analog Integrated Circuits, MEMS which provided me exposure to a wide range of topics in electronic circuit design.
+I then chose Arizona State University to pursue a Master’s degree due to its excellent coursework in electronic circuit design. I concentrated on courses like Analog Circuit Design, Digital Systems and Circuits and Semiconductor Device Theory in the first semester, while also identifying my research interests. Further I did courses on VLSI Circuit Design, Advanced VLSI Circuit Design, Advanced Analog Integrated Circuits, MEMS which provided me exposure to a wide range of topics in electronic circuit design.
 
 In the second semester, my interest in analog circuit design led to my association with Prof Michael Goryll. I worked on trans-impedance amplifier design for measuring currents from single ion channels of cells. My task was to come up with a circuit to replace the resistive feedback amplifier which requires large values of resistors to be fabricated. I implemented a switched capacitive trans-impedance amplifier which could not only overcome the drawbacks of a resistive feedback circuit, but had more accurate current recording capability than the currently used capacitive feedback circuit as my circuit could record currents even during the hold phase of the sample and hold circuit. I relished the freedom of thought offered by a research project as compared to an academic project. Now, as I see the chip being taped out, the joy of creating something tangible and being able to contribute to a field I am passionate about can never be expressed enough. I then realize this is what I see myself doing ten years hence. 
 
@@ -25,7 +36,7 @@ I am also working on the functional validation of a radiation hardened microproc
 
 I am also the teaching assistant for a course on advanced VLSI design. I set up and managed the accompanying simulation laboratory for the course. I realised that helping other students with their projects and answering seemingly obvious doubts taught me a great deal more about the subject as well. While working as a TA, I also got a first hand view of what running a course in a university involves, specifically,  the varying levels of stress laid on fundamentals in assignments and exams and maintaining the level of difficulty to cater to all the students. It was a challenge on its own to come up with an exhaustive problem set for each chapter. Overall, this was a very enlightening experience.
 
-My enthusiasm for intellectual and personal development has spilled beyond textbooks. I have been an active member in several organizations and headed several committees like the Technical Committee, Music Committee, Department Magazine Committee during my undergraduate studies. I brought out the first department magazine with an aim to expose students to the latest developments in EECS. I also organized the first state level technical symposium of my college as the head of the Technical committee. Leading a large team was difficult, but at the same time, the pride of pulling off an event successfully was immense. I have also been singing Indian classical music for more than ten years and have rendered several concerts. 
+My enthusiasm for intellectual and personal development has spilled beyond textbooks. I have been an active member in several organizations and headed several committees like the Technical Committee, Music Committee, Department Magazine Committee during my undergraduate studies. I brought out the first department magazine with an aim to expose students to the latest developments in telecommunication. I also organized the first state level technical symposium of my college as the head of the Technical committee. Leading a large team was difficult, but at the same time, the pride of pulling off an event successfully was immense. I have also been singing Indian classical music for more than ten years and have rendered several concerts. 
 
  The research opportunities combined with exciting faculty in the Department of Electrical and Computer Engineering at UMass are just the right ingredients for an excellent research program. The research projects in VLSI Circuits and Systems Group greatly interest me. In particular I can identify my interests with Prof Wayne Burleson’s research concentrations like jitter effect on global binary clock trees and fingerprinting application of power-up SRAM state. I am also fascinated by the research interests of Prof Sandip Kundu especially, in VLSI Design Methodologies and Circuit Design. I would love to contribute to these groups that work on such a wide range of fascinating topics.
 
